Fixed the option button on mobile view

--- a/style.css
+++ b/style.css
@@ -77,6 +77,7 @@ nav{
         display: flex;
         flex-direction: column;
         display: none;
+        padding: 20px 0;
     }
     .active{
         display: block;
@@ -139,7 +140,7 @@ input:focus{
     }
     nav{
         flex-direction: column;
-        padding: 0;
+        padding: 20px;
         
     }
     h1{
